--- a/module3-solution/mystyle.css
+++ b/module3-solution/mystyle.css
@@ -45,7 +45,7 @@
   text-align: center;
   color: #000000;
   font-size: 50px;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: "Verdana", cursive, sans-serif;
   font-weight: bold;
 }
 
